Adding profil.html

--- a/details.html
+++ b/details.html
@@ -18,7 +18,7 @@
                 <a href="details.html">Details</a>
             </li>
             <li>
-                <a href="#profil.html">Profil</a>
+                <a href="profil.html">Profil</a>
             </li>
             <li>
                 <a href="#register.html">Register</a>
