Adding register/login.html

--- a/register.html
+++ b/register.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Register</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+
     <header>
         <h2>Harry Potter</h2>
         <nav>
@@ -28,23 +28,27 @@
             </li>
         </nav>
     </header>
-    
-    <main id="home">
-        <section>
-            <h1>Start Your <br>Collection</h1>
-            <p>Explore our unique collection of Harry Potter cards ! Discover rarities and your favorites characteres from the enchanting world of Hogwarts. Join a community of enthusiasts and complete your magical collection now !</p>
-            <div id="button">
-                <a href="register.html">Register</a>
-                <a href="login.html">Login</a>
+
+    <main id="register">
+        <form action="#">
+            <h2>Register</h2>
+            <div class="form">
+                <div class="reg-name">
+                    <p>Name</p>
+                    <input type="text" placeholder="Harry7832">
+                </div>
+                <div class="reg-psw">
+                    <p>Password</p>
+                    <input type="password" placeholder=".......">
+                </div>
             </div>
-        </section>
-        <img src="./img/home.png" alt="illustration-harry-potter-voldemort">
+            <input type="submit">
+        </form>
     </main>
 
     <footer>
 
     </footer>
 
-    <script src="./js/script.js"></script>
 </body>
 </html>
