--- a/details.html
+++ b/details.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Details</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -21,10 +21,10 @@
                 <a href="profil.html">Profil</a>
             </li>
             <li>
-                <a href="#register.html">Register</a>
+                <a href="register.html">Register</a>
             </li>
             <li>
-                <a href="#login.html">Login</a>
+                <a href="login.html">Login</a>
             </li>
         </nav>
     </header>
