--- a/profil.html
+++ b/profil.html
@@ -21,10 +21,10 @@
                 <a href="profil.html">Profil</a>
             </li>
             <li>
-                <a href="#register.html">Register</a>
+                <a href="register.html">Register</a>
             </li>
             <li>
-                <a href="#login.html">Login</a>
+                <a href="login.html">Login</a>
             </li>
         </nav>
     </header>
