--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+
+    <!-- <button class="trade-btn">
+        Trade a card
+    </button> -->
+    <button id="open-modal-btn">Trade a card</button>
+
+    <div id="modal">
+        <div class="modal-content">
+            <p>This is a simple modal popup.</p>
+            <button id="close-modal-btn">Close</button>
+        </div>
+    </div>
     
     <header>
-        <h2>Harry Potter</h2>
+        <h2>Harry Potter Cards</h2>
         <nav>
             <li>
                 <a href="index.html">Home</a>
@@ -45,6 +57,6 @@
 
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
