--- a/profil.html
+++ b/profil.html
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+    <button id="open-modal-btn">Trade a card</button>
+
+    <div id="modal">
+        <div class="modal-content">
+            <p>This is a simple modal popup.</p>
+            <button id="close-modal-btn">Close</button>
+        </div>
+    </div>
+
     <header>
         <h2>Harry Potter</h2>
         <nav>
@@ -40,7 +49,7 @@
             </div>
         </div>
         <div class="collection">
-            <h2>Possessed Cards : </h2>
+            <h2>Possessed Cards: </h2>
             <ul id="card-list">
                 <li class="hp-card" id="harry-potter"><img src="/img/cards/carte_harry_potter.jpg" alt=""></li>
                 <li class="hp-card" id="harry-potter"><img src="/img/cards/carte_voldemort.jpg" alt=""></li>
@@ -54,6 +63,6 @@
 
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
