--- a/register.html
+++ b/register.html
@@ -28,7 +28,26 @@
             </li>
         </nav>
     </header>
-
+    
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <li>
+            <a href="index.html">Home</a>
+        </li>
+        <li>
+            <a href="details.html">Details</a>
+        </li>
+        <li>
+            <a href="profil.html">Profil</a>
+        </li>
+        <li>
+            <a href="register.html">Register</a>
+        </li>
+        <li>
+            <a href="login.html">Login</a>
+        </li>
+    </div>
+    <img src="./img/icon/burger.png" onclick="openNav()" alt="menu-burger" id="burger">
     <main id="register">
         <form action="#">
             <h2>Register</h2>
@@ -49,6 +68,6 @@
     <footer>
 
     </footer>
-
+    <script src="./js/sidenav.js"></script>
 </body>
 </html>
