--- a/details.html
+++ b/details.html
@@ -56,7 +56,27 @@
         </nav>
     </header>
 
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <li>
+            <a href="index.html">Home</a>
+        </li>
+        <li>
+            <a href="details.html">Details</a>
+        </li>
+        <li>
+            <a href="profil.html">Profil</a>
+        </li>
+        <li>
+            <a href="register.html">Register</a>
+        </li>
+        <li>
+            <a href="login.html">Login</a>
+        </li>
+    </div>
+
     <main id="cards-research">
+        <img src="./img/icon/burger.png" onclick="openNav()" alt="menu-burger" id="burger">
         <section class="research">
             <h1>Discover the entire Harry Potter card collection !</h1>
         <!-- input de recherche -->
@@ -87,5 +107,6 @@
 
     <script src="./js/modal.js"></script>
     <script src="./js/filter.js"></script>
+    <script src="./js/sidenav.js"></script>
 </body>
 </html>
