--- a/profil.html
+++ b/profil.html
@@ -38,7 +38,27 @@
         </nav>
     </header>
 
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <li>
+            <a href="index.html">Home</a>
+        </li>
+        <li>
+            <a href="details.html">Details</a>
+        </li>
+        <li>
+            <a href="profil.html">Profil</a>
+        </li>
+        <li>
+            <a href="register.html">Register</a>
+        </li>
+        <li>
+            <a href="login.html">Login</a>
+        </li>
+    </div>
+
     <main id="profil">
+        <img src="./img/icon/burger.png" onclick="openNav()" alt="menu-burger" id="burger">
         <div class="user">
             <div class="pseudo">
                 <h1>Noot</h1>
@@ -64,5 +84,6 @@
     </footer>
 
     <script src="./js/modal.js"></script>
+    <script src="./js/sidenav.js"></script>
 </body>
 </html>
