--- a/details.html
+++ b/details.html
@@ -94,10 +94,10 @@
 
         <!-- liste des cartes -->
         <ul id="card-list">
-            <li class="hp-card" id="harry-potter" data-maison="Gryffondor"><img src="/img/cards/carte_harry_potter.jpg" alt=""><input type="checkbox" id="like-harry"><label for="like-harry" class="like-checkbox"></label></li>
-            <li class="hp-card" id="harry-potter" data-maison="Serpentard"><img src="/img/cards/carte_voldemort.jpg" alt=""><input type="checkbox" id="like-voldemort"><label for="like-voldemort" class="like-checkbox"></label></li>
-            <li class="hp-card" id="harry-potter" data-maison="Serdaigle"><img src="/img/cards/carte_hagrid.jpg" alt=""><input type="checkbox" id="like-hagrid"><label for="like-hagrid" class="like-checkbox"></label></li>
-            <li class="hp-card" id="harry-potter" data-maison="Poufsouffle"><img src="/img/cards/carte_draco_malfoy.jpg" alt=""><input type="checkbox" id="like-draco"><label for="like-draco" class="like-checkbox"></label></li>
+            <li class="hp-card" id="harry-potter" data-maison="Gryffondor"><img src="img/cards/carte_harry_potter.jpg" alt=""><input type="checkbox" id="like-harry"><label for="like-harry" class="like-checkbox"></label></li>
+            <li class="hp-card" id="harry-potter" data-maison="Serpentard"><img src="img/cards/carte_voldemort.jpg" alt=""><input type="checkbox" id="like-voldemort"><label for="like-voldemort" class="like-checkbox"></label></li>
+            <li class="hp-card" id="harry-potter" data-maison="Serdaigle"><img src="img/cards/carte_hagrid.jpg" alt=""><input type="checkbox" id="like-hagrid"><label for="like-hagrid" class="like-checkbox"></label></li>
+            <li class="hp-card" id="harry-potter" data-maison="Poufsouffle"><img src="img/cards/carte_draco_malfoy.jpg" alt=""><input type="checkbox" id="like-draco"><label for="like-draco" class="like-checkbox"></label></li>
         </ul>
     </main>
 
