--- a/profil.html
+++ b/profil.html
@@ -64,17 +64,17 @@
                 <h1>Noot</h1>
             </div>
             <div class="identity">
-                <img src="/img/maisons/serpentar.png" alt="house">
+                <img src="img/maisons/serpentar.png" alt="house">
                 <!-- <h2>Serpentard</h2> -->
             </div>
         </div>
         <div class="collection">
             <h2>Possessed Cards: </h2>
             <ul id="card-list">
-                <li class="hp-card" id="harry-potter"><img src="/img/cards/carte_harry_potter.jpg" alt=""></li>
-                <li class="hp-card" id="harry-potter"><img src="/img/cards/carte_voldemort.jpg" alt=""></li>
-                <li class="hp-card" id="harry-potter"><img src="/img/cards/carte_hagrid.jpg" alt=""></li>
-                <li class="hp-card" id="harry-potter"><img src="/img/cards/carte_draco_malfoy.jpg" alt=""></li>
+                <li class="hp-card" id="harry-potter"><img src="img/cards/carte_harry_potter.jpg" alt=""></li>
+                <li class="hp-card" id="harry-potter"><img src="img/cards/carte_voldemort.jpg" alt=""></li>
+                <li class="hp-card" id="harry-potter"><img src="img/cards/carte_hagrid.jpg" alt=""></li>
+                <li class="hp-card" id="harry-potter"><img src="img/cards/carte_draco_malfoy.jpg" alt=""></li>
             </ul>
         </div>
     </main>
