--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <main id="home">
         <img src="./img/icon/burger.png" onclick="openNav()" alt="menu-burger" id="burger">
         <section>
-            <h1>Start Your <br>Collection</h1>
+            <h1>Start Your <br><span>Collection</span></h1>
             <p>Explore our unique collection of Harry Potter cards ! Discover rarities and your favorites characteres from the enchanting world of Hogwarts. Join a community of enthusiasts and complete your magical collection now !</p>
             <div id="button">
                 <a href="register.html">Register</a>
@@ -89,9 +89,6 @@
         <img src="./img/home.png" alt="illustration-harry-potter-voldemort" id="hv">
     </main>
 
-    <footer>
-
-    </footer>
 
     <script src="./js/modal.js"></script>
     <script src="./js/sidenav.js"></script>
