--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h2>Harry Potter</h2>
+        <h2>Harry Potter Cards</h2>
         <nav>
             <li>
                 <a href="index.html">Home</a>
@@ -50,15 +50,11 @@
     <img src="./img/icon/burger.png" onclick="openNav()" alt="menu-burger" id="burger">
     <main id="register">
         <form action="#">
-            <h2>Register</h2>
+            <h2>Login</h2>
             <div class="form">
                 <div class="reg-name">
                     <p>Name</p>
                     <input type="text" placeholder="Harry7832">
-                </div>
-                <div class="reg-email">
-                    <p>Email</p>
-                    <input type="email" placeholder="ex@gmail.com">
                 </div>
                 <div class="reg-psw">
                     <p>Password</p>
@@ -69,9 +65,6 @@
         </form>
     </main>
 
-    <footer>
-
-    </footer>
     <script src="./js/sidenav.js"></script>
 </body>
 </html>
