--- a/profil.html
+++ b/profil.html
@@ -12,13 +12,30 @@
 
     <div id="modal">
         <div class="modal-content">
-            <p>This is a simple modal popup.</p>
+            <form action="#">
+                <h2>Trade a card with someone</h2>
+                <div class="form">
+                    <div class="reg-name-modal">
+                        <p>Name of the receiver</p>
+                        <input type="text" placeholder="Harry7832">
+                    </div>
+                    <div class="reg-name-modal">
+                        <p>Name of the card</p>
+                        <input type="text" placeholder="Voldemort">
+                    </div>
+                    <div class="reg-psw-modal">
+                        <p>Confirm with your password</p>
+                        <input type="password">
+                    </div>
+                </div>
+                <input type="submit">
+            </form>
             <button id="close-modal-btn">Close</button>
         </div>
     </div>
 
     <header>
-        <h2>Harry Potter</h2>
+        <h2>Harry Potter Cards</h2>
         <nav>
             <li>
                 <a href="index.html">Home</a>
@@ -79,9 +96,6 @@
         </div>
     </main>
 
-    <footer>
-
-    </footer>
 
     <script src="./js/modal.js"></script>
     <script src="./js/sidenav.js"></script>
