--- a/card.html
+++ b/card.html
@@ -76,18 +76,11 @@
     <img src="./img/icon/burger.png" onclick="openNav()" alt="menu-burger" id="burger">
 
 
-    <main id="card-view"> 
-        <img src="img/cards/carte_harry_potter.jpg" alt="card">
-        <div class="card-info">
-            <h3>Name : <span>Harry Potter</span></h3>
-            <h3>Age : <span>18</span></h3>
-            <h3>House : <span>Gryffondor</span></h3>
-            <h3>Strength : <span>80/100</span></h3>
-        </div>
-    </main>
+    <main id="card-view"></main>
 
 
     <script src="./js/sidenav.js"></script>
+    <script src="./js/single_hp_api.js"></script>
     <script src="./js/modal.js"></script>
 </body>
 </html>
