--- a/login.html
+++ b/login.html
@@ -73,5 +73,6 @@
 
     <script src="./js/sidenav.js"></script>
     <script src="./js/login.js"></script>
+    <script src="./js/localstorage.js"></script>
   </body>
 </html>
