--- a/register.html
+++ b/register.html
@@ -79,7 +79,6 @@
       </form>
     </main>
 
-    <script src="./js/sidenav.js"></script
-    
+    <script src="./js/sidenav.js"></script>
   </body>
 </html>
