adding openning card system and profil view

--- a/index.html
+++ b/index.html
@@ -102,7 +102,17 @@
       />
     </main>
 
+    <section id="open-card">
+      <div id="open">
+        <h2>Open a booster of 3 cards every 24h !</h2>
+        <button id="booster-btn" type="submit">Tirer au sort</button>
+      </div>
+
+      <div id="booster-cards-container"></div>
+    </section>
+
     <script src="./js/modal.js"></script>
     <script src="./js/sidenav.js"></script>
+    <script src="./js/open_booster.js"></script>
   </body>
 </html>
