--- a/profil.html
+++ b/profil.html
@@ -93,9 +93,9 @@
           <img src="img/maisons/serpentar.png" alt="house" />
         </div>
       </div>
-      <div class="collection">
+      <div class="collection" id="list-card">
         <h2>Possessed Cards:</h2>
-        <ul id="card-list">
+        <!-- <ul id="card-list">
           <li class="hp-card" id="harry-potter">
             <img src="img/cards/carte_harry_potter.jpg" alt="" />
           </li>
@@ -108,7 +108,7 @@
           <li class="hp-card" id="harry-potter">
             <img src="img/cards/carte_draco_malfoy.jpg" alt="" />
           </li>
-        </ul>
+        </ul> -->
       </div>
     </main>
 
