adding favorite button

--- a/details.html
+++ b/details.html
@@ -6,6 +6,7 @@
     <title>Details</title>
 
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <button id="open-modal-btn">Trade a card</button>
@@ -112,7 +113,7 @@
     <script src="./js/modal.js"></script>
     <script src="./js/hp_api.js"></script>
     <script src="./js/filter.js"></script>
+    <script src="./js/favorite.js"></script>
     <script src="./js/sidenav.js"></script>
-    <script src="./js/search.js"></script>
   </body>
 </html>
