update bug darkmode

--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h2>Harry Potter Cards</h2>
-      <button class="darkmode">Darkmode</button>
+      <button class="Darkmode">Darkmode</button>
     </header>
 
     <div id="mySidenav" class="sidenav">
