--- a/details.html
+++ b/details.html
@@ -76,6 +76,7 @@
       fill="none"
       xmlns="http://www.w3.org/2000/svg"
       style="height: 13vh"
+      id="svg"
     >
       <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
       <g
